--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -404,6 +404,7 @@
   "config_link_startupPage_label": { "message": "Page for Initial Startup" },
   "config_link_groupPage_label":   { "message": "Page for Group Tab" },
 
+  "config_runTests_label": { "message": "Run Automated Tests" },
   "config_debug_label": { "message": "Debug mode" },
   "config_log_caption":               { "message": "Detailed logging" },
   "config_logFor_common":     { "message": "Logs from common modules" },
