--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -400,6 +400,7 @@
   "config_link_startupPage_label": { "message": "初回起動時用のページ" },
   "config_link_groupPage_label":   { "message": "グループ化用タブのページ" },
 
+  "config_runTests_label": { "message": "自動テストを実行" },
   "config_debug_label": { "message": "デバッグモード" },
   "config_log_caption":               { "message": "詳細なログ" },
   "config_logFor_common":     { "message": "共通モジュールからのログ" },
