--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -291,7 +291,7 @@
 
   "config_autoGroupNewTabsFromPinned_label": { "message": "Auto-group tabs opened from same pinned tab" },
 
-  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Inherit the container of the parent tab to a new blank tab" },
+  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Inherit the container of the parent tab to a new blank tab (*Please note that the new tab won't inherit the container of the previously active tab, if it is opened as an independent tab)" },
 
 
   "config_treeBehavior_caption": { "message": "Tree Behavior" },
