--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -213,6 +213,8 @@
   "config_colorScheme_photon": { "message": "Photon" },
   "config_colorScheme_systemColor": { "message": "System Color" },
 
+  "config_applyBrowserTheme_label": { "message": "Apply Browser Theme" },
+
   "config_maxTreeLevel_before": { "message": "Indent tabs until" },
   "config_maxTreeLevel_after": { "message": "level(s) (*Negative value means \"infinite\")" },
 
