--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -209,6 +209,8 @@
   "config_colorScheme_photon": { "message": "Photon" },
   "config_colorScheme_systemColor": { "message": "システムカラー" },
 
+  "config_applyBrowserTheme_label": { "message": "ブラウザの現在の配色を反映" },
+
   "config_maxTreeLevel_before": { "message": "ツリーを" },
   "config_maxTreeLevel_after": { "message": "階層までインデント表示する（※負の値を指定した場合は無制限）" },
 
