--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -370,6 +370,7 @@
   "config_userStyleRules_description_link_label": { "message": "code snippets at TST wiki" },
   "config_userStyleRules_description_after": { "message": " also." },
   "config_userStyleRules_description_link_uri": { "message": "https://github.com/piroor/treestyletab/wiki/Code-snippets-for-custom-style-rules#for-version-2x" },
+  "config_userStyleRules_themeRules_description": { "message": "Following custom properties are also available via \"var()\", based on the current browser theme:" },
 
 
   "config_debug_caption": { "message": "Development" },
