--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -383,6 +383,7 @@
   "config_runTests_label": { "message": "Run Automated Tests" },
   "config_debug_label": { "message": "Debug mode" },
   "config_log_caption":               { "message": "Detailed logging" },
+  "config_logTimestamp_label": { "message": "Log with timestamp" },
   "config_logFor_common":     { "message": "Logs from common modules" },
   "config_logFor_background": { "message": "Logs from background modules" },
   "config_logFor_sidebar":    { "message": "Logs from sidebar modules" },
