--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -379,6 +379,7 @@
   "config_runTests_label": { "message": "自動テストを実行" },
   "config_debug_label": { "message": "デバッグモード" },
   "config_log_caption":               { "message": "詳細なログ" },
+  "config_logTimestamp_label": { "message": "日時をログに付与する" },
   "config_logFor_common":     { "message": "共通モジュールからのログ" },
   "config_logFor_background": { "message": "バックグラウンドモジュールからのログ" },
   "config_logFor_sidebar":    { "message": "サイドバーモジュールからのログ" },
