feat(focus): Add more commands to focus child/sibling
Add focusLastChild, focusPreviousSibling, focusNextSibling

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -17,6 +17,9 @@
   "command_focusNextSilently":     { "message": "Focus to Next Tab (don't expand tree)" },
   "command_focusParent":           { "message": "Focus to Parent Tab" },
   "command_focusFirstChild":       { "message": "Focus to First Child Tab" },
+  "command_focusLastChild":        { "message": "Focus to Last Child Tab" },
+  "command_focusPreviousSibling":  { "message": "Focus to Previous Sibling Tab" },
+  "command_focusNextSibling":      { "message": "Focus to Next Sibling Tab" },
   "command_tabbarUp":              { "message": "Scroll Tabs Up by Line" },
   "command_tabbarPageUp":          { "message": "Scroll Tabs Up by Page" },
   "command_tabbarHome":            { "message": "Scroll Tabs to Top" },
