--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -181,6 +181,8 @@
   "context_unpinnedTab_label": { "message": "Unpinned (for testing of a radio type menu)" },
 
 
+  "config_title": { "message": "Tree Style Tab Options" },
+
   "config_appearance_caption": { "message": "Appearance" },
 
   "config_sidebarPosition_caption": { "message": "Style of contents for the sidebar position:" },
