Show hint to deactivate group tab #2217

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -65,6 +65,8 @@
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
     }},
+  "groupTab_options_label": { "message": "There is an option to deactivate opening of this type tab." },
+  "groupTab_options_dismiss": { "message": "Dismiss this hint" },
 
   "bookmarkFolder_label_default": { "message": "$TITLE$ and more (%YEAR%.%MONTH%.%DATE%)",
     "placeholders": {
