Add UI for warnOnAutoGroupNewTabs

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -303,6 +303,7 @@
   "config_autoGroupNewTabs_after": { "message": "msec" },
   "config_autoGroupNewTabsDelayOnNewWindow_before": { "message": "But don't group new tabs opened within" },
   "config_autoGroupNewTabsDelayOnNewWindow_after": { "message": "msec when a new window is opened, as a part of tabs opened as \"home page\"." },
+  "config_warnOnAutoGroupNewTabs_label": { "message": "Confirm to group tabs" },
 
   "config_autoGroupNewTabsFromPinned_label": { "message": "Auto-group tabs opened from same pinned tab" },
 
