Translate added commands

--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -17,6 +17,9 @@
   "command_focusNextSilently":     { "message": "次のタブにフォーカスを移す（ツリーを展開しない）" },
   "command_focusParent":           { "message": "親のタブにフォーカスを移す" },
   "command_focusFirstChild":       { "message": "最初の子タブにフォーカスを移す" },
+  "command_focusLastChild":        { "message": "最後の子タブにフォーカスを移す" },
+  "command_focusPreviousSibling":  { "message": "同階層の前のタブにフォーカスを移す" },
+  "command_focusNextSibling":      { "message": "同階層の次のタブにフォーカスを移す" },
   "command_tabbarUp":              { "message": "タブの一覧を1行上にスクロール" },
   "command_tabbarPageUp":          { "message": "タブの一覧を1ページ上にスクロール" },
   "command_tabbarHome":            { "message": "タブの一覧を先頭までスクロール" },
