Close temporary group tab when there is one or less child, if it was opened as a successor of a closed parent tab #2253

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -64,6 +64,7 @@
     }},
   "groupTab_label_default": { "message": "Group" },
   "groupTab_temporary_label": { "message": "Close this tab when there are no more children" },
+  "groupTab_temporaryAggressive_label": { "message": "Close this tab when there is one or less child" },
   "groupTab_fromPinnedTab_label": { "message": "Tabs from $TITLE$",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
