Add UI to on/off permisssions #2282

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -404,6 +404,9 @@
   "config_userStyleRules_description_link_uri": { "message": "https://github.com/piroor/treestyletab/wiki/Code-snippets-for-custom-style-rules#for-version-2x" },
   "config_userStyleRules_themeRules_description": { "message": "Following custom properties are also available via \"var()\", based on the current browser theme:" },
 
+  "config_externaladdonpermissions_label": { "message": "Permissions for API Call from Other Addons" },
+  "config_externaladdonpermissions_description": { "message": "Addons allowed here may access your privacy data via Tree Style Tab's API, even if the addon is forbidden to access such sensitive information on Firefox's permission system. Please don't give permission for addons if you cannot trust." },
+
 
   "config_debug_caption": { "message": "Development" },
 
