--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -401,7 +401,7 @@
   "config_userStyleRules_themeRules_description": { "message": "現在のブラウザのテーマに基づいて、「var()」で以下のカスタムプロパティも使用できます：" },
 
   "config_externaladdonpermissions_label": { "message": "他のアドオンからのAPI呼び出しに与える許可" },
-  "config_externaladdonpermissions_description": { "message": "Firefox自体が禁止していても、ここで権限を与えたアドオンはツリー型タブを介してプライバシー情報にアクセスできるようになります。信用できないアドオンに対しては絶対に権限を与えないで下さい。" },
+  "config_externaladdonpermissions_description": { "message": "ここでチェックを入れたアドオンは、Firefox自体がそのアドオンにプライバシー情報へのアクセスを禁止していても、<em>ツリー型タブの権限で</em>プライバシー情報にアクセスできるようになります。<em>信用できないアドオンに対しては絶対に権限を与えないで下さい。</em>" },
 
 
   "config_debug_caption": { "message": "開発用" },
